WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282158
[JSC] Fix iteratorHelperPrivateFuncCreate since underlyingIterator can be jsNull
https://bugs.webkit.org/show_bug.cgi?id=282158
Summary
[JSC] Fix iteratorHelperPrivateFuncCreate since underlyingIterator can be jsNull
Yijia Huang
Reported
2024-10-27 16:41:08 PDT
<
rdar://138642507
>
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-10-27 16:53:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35777
EWS
Comment 2
2024-10-27 21:11:24 PDT
Committed
285757@main
(9bba5ab0c0ab): <
https://commits.webkit.org/285757@main
> Reviewed commits have been landed. Closing PR #35777 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug