[JSC] Fix iteratorHelperPrivateFuncCreate since underlyingIterator can be jsNull https://bugs.webkit.org/show_bug.cgi?id=282158 rdar://138642507

Reviewed by Mark Lam.

The internal field underlyingIterator of iteratorHelper can be null in
JSIteratorConstructor.js, and its nullability is checked in
JSIteratorHelperPrototype.js. This patch addresses that case by directly
passing JSValue in JSIteratorHelper::create.

* Source/JavaScriptCore/runtime/JSIteratorHelper.cpp:
(JSC::JSIteratorHelper::create):
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSIteratorHelper.h:

Canonical link: https://commits.webkit.org/285757@main